<resources>
    <string name="app_name">ShoppingPoint</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sign_in">SignIn</string>
    <string name="title_activity_customer_registration">CustomerRegistration</string>
    <string name="title_activity_customer_sign_in">CustomerSignIn</string>
    <string name="title_activity_view_items">ViewItems</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="login_success">Login successful.</string>
    <string name="incorrect_username">User name does not exists.</string>
    <string name="incorrect_password">Incorrect password.</string>
    <string name="view_products">View Items</string>
    <string name="item_category">Category</string>
    <string name="view_items">View Items</string>
    <string name="item_name">Enter product name</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="delete_from_cart">Delete Item</string>
    <string name="clear_fields">Clear</string>
    <string name="view_account_info">View</string>
    <string name="update_account_info">Update</string>
    <string name="submit_account_info">Submit</string>
    <string name="all_fields_requirement">Must enter all fields.</string>
    <string name="account_exists">User account already exists.</string>
    <string name="account_created">User account registered successfully.</string>
    <string name="enter_username">Must enter user name.</string>
    <string name="enter_username_and_password">Must enter user name and password.</string>
    <string name="enter_password">Must enter your password.</string>
    <string name="invalid_password">Invalid password.</string>
    <string name="account_not_exists">Customer account does not exist.</string>
    <string name="different_username">Please choose different user name.</string>
    <string name="no_items">No product items to display.</string>
    <string name="account_updated_successfully">Customer account updated successfully.</string>
    <string name="customer_username">Enter username</string>
    <string name="customer_password">Enter password</string>
    <string name="blank_username">User name cannot be blank.</string>
    <string name="blank_password">Password cannot be blank.</string>
    <string name="enter_product_type">Must enter the product type.</string>
    <string name="view_cart">View Cart</string>
    <string name="customer_check_out">Check Out</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last name</string>
    <string name="address">Address</string>
    <string name="city">City </string>
    <string name="country">Country</string>
    <string name="area_code">Area Code</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="username">Username</string>
    <string name="password">Password</string>

    <string name="customer_name">Name</string>
    <string name="customer_contacts">Contacts</string>

    <string name="product_name">Name:</string>
    <string name="product_short_descr">Short Description:</string>
    <string name="product_detail_descr">Detail Description:</string>
    <string name="item_short_descr">Description:</string>
    <string name="item_detail_descr">Detail Description:</string>
    <string name="product_number">Number:</string>
    <string name="product_quantity">Quantity:</string>
    <string name="product_price">Price:</string>

    <string name="first_name_hint">Enter first name</string>
    <string name="last_name_hint">Enter last name</string>
    <string name="address_hint">Enter Address</string>
    <string name="city_hint">Enter city name</string>
    <string name="country_hint">Enter country name</string>
    <string name="area_code_hint">Enter area code</string>
    <string name="email_hint">Enter email</string>
    <string name="phone_number_hint">Enter phone number</string>
    <string name="username_hint">Enter user name</string>
    <string name="password_hint">Enter password</string>
    <string name="customer_already_signed_in">Customer already signed in.</string>
    <string name="customer_not_signed_in">Customer is not signed in.</string>
    <string name="customer_signed_out">Signed out successfully.</string>
    <string name="log_in">Sign In</string>
    <string name="log_out">Sign Out</string>

    <string name="sign_in_dialog_title">Sign In Dialog</string>
    <string name="check_out_dialog_title">Check Out Dialog</string>
    <string name="user_name_hint">Enter user name</string>
    <string name="credit_card_name_hint">Enter name on the card</string>
    <string name="credit_card_number_hint">Enter credit cart number</string>
    <string name="card_expiry_date_hint">Expiry date: month/year</string>
    <string name="credit_card_cvv_number_hint">Enter card validation number</string>
    <string name="log_in_button_title">Log In</string>
    <string name="cancel_button_title">Cancel</string>
    <string name="blank_user_name">User name cannot be blank.</string>
    <string name="visa_card">Visa</string>
    <string name="master_card">Master Card</string>
    <string name="total_amount_charged">Total: $0.0</string>

    <string name="blank_credit_card_number">"Card number cannot be blank."</string>
    <string name="blank_expiry_date">"Card expiry date cannot be blank."</string>
    <string name="blank_cvv_number">"Card verification number cannot be blank."</string>
    <string name="card_select_type">"Credit card type myst be selected."</string>
    <string name="credit_card_number_length">"Credit number is not 16 digits long."</string>
    <string name="credit_card_invalid_characters">"Card number contains invalid characters."</string>
    <string name="cvv_invalid_characters">"CVV card number contains invalid characters."</string>
    <string name="card_number_first_digit_zero">"Card number first digit cannot be zero."</string>
    <string name="cvv_number_first_digit_zero">"Card cvv number first digit cannot be zero."</string>
    <string name="invalid_card_date_entry">"Invalid credit card date entry."</string>

    <string-array name="product_category">
        <item>Appliances</item>
        <item>Food</item>
        <item>Clothes</item>
        <item>Electronics</item>
    </string-array>
    <string name="title_activity_view_product_item">ViewProductItem</string>
    <string name="title_activity_customer_cart">CustomerCart</string>
</resources>
