<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="@drawable/milkywaygalaxy2"
    tools:context="com.shoppingpoint.CustomerRegistration"
    tools:showIn="@layout/activity_customer_registration">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-15dp">

        <TextView
            style=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17dp"
            android:paddingLeft="10dp"
            android:textColor="@color/DarkOrange"
            android:text="@string/first_name" >
        </TextView>

        <EditText
            android:id="@+id/first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:textSize="17dp"
            android:textColor="@color/DarkOrange"
            android:textColorHint="@color/DarkOrange"
            android:hint="@string/first_name_hint"
            android:layout_span="2" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            style=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17dp"
            android:paddingLeft="10dp"
            android:textColor="@color/DarkOrange"
            android:text="@string/last_name" >
        </TextView>

        <EditText
            android:id="@+id/last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17dp"
            android:textColor="@color/DarkOrange"
            android:textColorHint="@color/DarkOrange"
            android:hint="@string/last_name_hint"
            android:inputType="textCapWords"
            android:layout_span="2" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            style=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17dp"
            android:paddingLeft="10dp"
            android:textColor="@color/DarkOrange"
            android:text="@string/address" >
        </TextView>

        <EditText
            android:id="@+id/customer_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17dp"
            android:textColor="@color/DarkOrange"
            android:textColorHint="@color/DarkOrange"
            android:hint="@string/address_hint"
            android:inputType="textCapWords"
            android:layout_span="2" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            style=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17dp"
            android:paddingLeft="10dp"
            android:textColor="@color/DarkOrange"
            android:text="@string/city" >
        </TextView>

        <EditText
            android:id="@+id/customer_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17dp"
            android:textColor="@color/DarkOrange"
            android:textColorHint="@color/DarkOrange"
            android:hint="@string/city_hint"
            android:inputType="textCapWords"
            android:layout_span="2" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            style=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17dp"
            android:paddingLeft="10dp"
            android:textColor="@color/DarkOrange"
            android:text="@string/country" >
        </TextView>

        <EditText
            android:id="@+id/customer_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17dp"
            android:textColor="@color/DarkOrange"
            android:textColorHint="@color/DarkOrange"
            android:hint="@string/country_hint"
            android:inputType="textCapWords"
            android:layout_span="2" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            style=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17dp"
            android:paddingLeft="10dp"
            android:textColor="@color/DarkOrange"
            android:text="@string/area_code" >
        </TextView>

        <EditText
            android:id="@+id/customer_areacode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17dp"
            android:textColor="@color/DarkOrange"
            android:textColorHint="@color/DarkOrange"
            android:hint="@string/area_code_hint"
            android:inputType="textCapWords"
            android:layout_span="2" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            style=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17dp"
            android:paddingLeft="10dp"
            android:textColor="@color/DarkOrange"
            android:text="@string/email" >
        </TextView>

        <EditText
            android:id="@+id/customer_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17dp"
            android:textColor="@color/DarkOrange"
            android:textColorHint="@color/DarkOrange"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:layout_span="2" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            style=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17dp"
            android:paddingLeft="10dp"
            android:textColor="@color/DarkOrange"
            android:text="@string/phone_number" >
        </TextView>

        <EditText
            android:id="@+id/customer_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/DarkOrange"
            android:textSize="17dp"
            android:textColorHint="@color/DarkOrange"
            android:hint="@string/phone_number_hint"
            android:inputType="textCapWords"
            android:layout_span="2" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            style=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17dp"
            android:paddingLeft="10dp"
            android:textColor="@color/DarkOrange"
            android:text="@string/username" >
        </TextView>

        <EditText
            android:id="@+id/customer_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/DarkOrange"
            android:textSize="17dp"
            android:textColorHint="@color/DarkOrange"
            android:hint="@string/username_hint"
            android:inputType="textCapWords"
            android:layout_span="2" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            style=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17dp"
            android:paddingLeft="10dp"
            android:textColor="@color/DarkOrange"
            android:text="@string/password" >
        </TextView>

        <EditText
            android:id="@+id/customer_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/DarkOrange"
            android:textSize="17dp"
            android:textColorHint="@color/DarkOrange"
            android:hint="@string/password_hint"
            android:layout_span="2" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-8dp">

        <Button
            android:id="@+id/view_account_button"
            android:layout_width="130dp"
            android:layout_height="28dp"
            android:layout_margin="5dp"
            android:onClick="getCustomerInfo"
            android:background="@drawable/button_shape5"
            android:text="@string/view_account_info" />

        <Button
            android:id="@+id/submit_account_button"
            android:layout_width="180dp"
            android:layout_height="28dp"
            android:layout_margin="5dp"
            android:onClick="submitCustomerInfo"
            android:background="@drawable/button_shape5"
            android:text="@string/submit_account_info" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-3dp">

        <Button
            android:id="@+id/update_button"
            android:layout_width="130dp"
            android:layout_height="28dp"
            android:layout_margin="5dp"
            android:onClick="updateCustomerInfo"
            android:background="@drawable/button_shape5"
            android:text="@string/update_account_info"/>

        <Button
            android:id="@+id/clear_fields_button"
            android:layout_width="180dp"
            android:layout_height="28dp"
            android:layout_margin="5dp"
            android:onClick="clearAccountFields"
            android:background="@drawable/button_shape5"
            android:text="@string/clear_fields"/>
    </TableRow>

</TableLayout>
