<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:id="@+id/textView"
        android:layout_marginTop="11dp"
        android:layout_marginLeft="80dp"
        android:textSize="20dp"
        android:text="@string/sign_in_dialog_title"
        android:textColor="@color/DarkOrange" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:id="@+id/usernameEditText"
        android:layout_marginTop="45dp"
        android:textSize="20dp"
        android:paddingLeft="10dp"
        android:textColorHint="@color/DarkOrange"
        android:hint="@string/user_name_hint"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:id="@+id/passwordEditText"
        android:layout_marginTop="95dp"
        android:textSize="20dp"
        android:paddingLeft="10dp"
        android:textColorHint="@color/DarkOrange"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="145dp"
        android:layout_height="35dp"
        android:id="@+id/logInButton"
        android:layout_marginTop="165dp"
        android:layout_marginRight="0dp"
        android:text="@string/log_in"
        android:background="@drawable/button_shape9" />

    <Button
        android:layout_width="145dp"
        android:layout_height="35dp"
        android:id="@+id/cancelButton"
        android:layout_marginTop="165dp"
        android:layout_marginLeft="145dp"
        android:text="@string/cancel_button_title"
        android:background="@drawable/button_shape9" />

</RelativeLayout>