<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.shoppingpoint.MainActivity">

    <item android:id="@+id/log_in"
        android:orderInCategory="100"
        android:title="@string/log_in"
        app:showAsAction="never">
    </item>
    <!-- group android:menuCategory="alternative">
        <item
            android:id="@+id/action_settings"
            android:orderInCategory="1"
            android:title="@string/action_settings"
            app:showAsAction="never">
        </item>
        <item android:id="@+id/log_in"
            android:orderInCategory="2"
            android:title="@string/log_in"
            app:showAsAction="always">
        </item>
    </group -->
    <item
        android:id="@+id/viewCart"
        android:orderInCategory="100"
        android:title="@string/view_cart"
        app:showAsAction="always" />

    <item
        android:id="@+id/checkOut"
        android:orderInCategory="100"
        android:title="@string/customer_check_out"
        app:showAsAction="always" />

</menu>
