<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="@drawable/android1"
    tools:context="com.shoppingpoint.CustomerSignIn"
    tools:showIn="@layout/activity_customer_sign_in">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/customerUsernameEditText"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:hint="@string/customer_username"
        android:textColorHint="@color/LimeGreen"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/customerPasswordEditText"
        android:gravity="center"
        android:textSize="20dp"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:hint="@string/customer_password"
        android:textColorHint="@color/LimeGreen"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/customerUsernameEditText"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:text="@string/sign_in"
        android:id="@+id/customerSignInButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="95dp"
        android:textColor="@color/LimeGreen"
        android:onClick="customerLogIn"
        android:background="?android:attr/selectableItemBackground"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:text="@string/register"
        android:id="@+id/customerRegisterButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:onClick="customerRegistration"
        android:textColor="@color/LimeGreen"
        android:background="?android:attr/selectableItemBackground"/>
</RelativeLayout>
