<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="@drawable/sp3"
    tools:context="com.shoppingpoint.MainActivity"
    tools:showIn="@layout/activity_main">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp">

        <Button
            android:id="@+id/customer_sign_in"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            android:onClick="customerSignIn"
            android:background="@drawable/button_shape"
            android:alpha="0.7"
            android:text="@string/sign_in" />

        <Button
            android:id="@+id/customer_register"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            android:onClick="customerRegistration"
            android:alpha="0.7"
            android:background="@drawable/button_shape"
            android:text="@string/register"/>

        <Button
            android:id="@+id/view_products"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            android:onClick="viewCustomerProducts"
            android:alpha="0.7"
            android:background="@drawable/button_shape"
            android:text="@string/view_products" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">
    </TableRow>

</TableLayout>
